feat: add routes for swagger

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,21 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.mjs",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.mjs"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.mjs",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.mjs"
+    },
+    {
+      "src": "/swagger/(.*)",
+      "dest": "app.mjs"
+    }
+  ]
+}
+
   
